# chat-bot

./: .env.example  .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
backend/: config.py  db.py  main.py  models.py  schemas.py
backend/services/: chat_service.py  knowledge_base_service.py
backend/sql/: mysql_schema.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
tests/: test_chat_service_memory.py  test_knowledge_base_rerank.py
